# medik-semantics

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  commons.md  core.md  docker-build  docker-run  flake.nix  jsonRpc.md  kRpc.md  medik  medik.md  middleware  rpc-server  sepsis-demo  test-extern  time.md
cmake/client/: CMakeLists.txt  main.cpp
frontend/: psepsis_gui.py
hooks/: timer.cpp
medik-pyk/: .flake8  Makefile  README.md  __main__.py  kbuild.toml  pyproject.toml
medik-pyk/src/medik_pyk/: __main__.py  build.py  cli.py  config.py  kompile.py  krun.py  medik.md  medik.py
medik-pyk/src/medik_pyk/kdist/: plugin.py
medik-pyk/src/medik_pyk/kproj/tests/: interface-send-rat-1.medik  interface-send-rat-1.medik.expected
medik-pyk/src/medik_pyk/kproj/tests/execution/: args-3.medik  arith-1.medik  arith-rat-1.medik  dereference-1.medik  goto-1.medik.expected  in-match-1.medik  in-match-3.medik  interface-receive-1.medik.in  interface-receive-3.medik.in  machine-decl.medik  sleep-1.medik  sleep-4.medik.expected  this+dereference-2.medik
medik-pyk/src/medik_pyk/kproj/tests/model-check/: fairness-1.medik  nondet-1.medik.pattern  timed-1.medik.pattern  timed-2.medik  timed-2.medik.pattern
medik-pyk/src/tests/: config.py  conftest.py
medik-pyk/src/tests/unit/: config.py  test_medik_pyk.py
sepsis/: pediatric_sepsis.medik
t/: guideline-machine.medik  heart-machine.medik
tests/: args-2.medik  args-3.medik  args.medik  arith-1.medik  arith-2.medik  arith-3.medik  arith-4.medik  arith-rat-2.medik  bexp-1.medik.expected  bexp-2.medik  bexp-2.medik.expected  bexp-3.medik  bexp-rat-1.medik  broadcast-1.medik  broadcast-2.medik  broadcast-3.medik  broadcast-4.medik  broadcast-4.medik.expected  decl.medik  dereference-1.medik  dereference-2.medik  direct-init-1.medik  direct-init-2.medik  extern-1.medik  extern-2.medik  extern-3.medik  extern-4.medik  get-1.medik  get-2.medik  goto-1.medik  goto-2.medik  goto-2.medik.expected  goto-3.medik  goto-3.medik.expected  heart-machine.medik  if-1.medik  if-1.medik.expected  in-match-2.medik  instruct-1.medik  interface-1.medik.expected  (+34 more)
tests/execution/: args-1.medik  arith-2.medik  bexp-1.medik  broadcast-1.medik.expected  broadcast-4.medik  case-1.medik  case-2.medik  event-handler-1.medik  event-handler-2.medik  fun-call-1.medik  goto-2.medik  if-1.medik  interface-obtain-1.medik.expected  interface-obtain-rat-1.medik.expected  interface-receive-1.medik  interface-send-1.medik.expected  this+dereference-1.medik  this-1.medik  undef-decl.medik  while-1.medik
tests/model-check/: fairness-1.medik.pattern  nondet-1.medik  normal-1.medik  normal-1.medik.pattern  obtainFrom-1.medik  obtainFrom-1.medik.pattern  obtainFrom-2.medik.pattern  stuck-1.medik  timed-1.medik  timed-3.medik  timed-4.medik
tests/sepsis/: age-entered-1.in.json  age-entered-1.medik.expected  bad-bp-1.in.json  (+21 more)
