[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "medik-pyk"
version = "0.1.0"
description = ""
authors = [
]
packages = [
    { include = "medik_pyk", from = "src/" },
]

[tool.poetry.dependencies]
python = "^3.10"
pathos = "*"
pyk = { git = "https://github.com/runtimeverification/pyk.git", tag="v0.1.434" }
tomlkit = "^0.11.6"
xdg-base-dirs = "^6.0.0"

[tool.poetry.scripts]
medik = "medik_pyk.__main__:main"
