[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "medik-pyk"
version = "0.1.0"
description = "Pyk-based tools for MediK"
authors = [
    "Manasvi Saxena <msaxena2@illinois.edu>",
]

packages = [
    { include = "medik_pyk", from = "src/" },
]

[tool.poetry.dependencies]
python = "^3.10"
pathos = "*"
pyk = { git = "https://github.com/runtimeverification/pyk.git", tag="v0.1.465" }
tomlkit = "^0.11.6"
xdg-base-dirs = "^6.0.0"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-quotes = "*"
flake8-type-checking = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-xdist = "*"
pyupgrade = "*"

[tool.poetry.scripts]
medik = "medik_pyk.medik:main"

[tool.isort]
profile = "black"
line_length = 120
skip_glob = "src/medik_pyk/ext/**"

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
exclude = [ "src/medik_pyk/ext" ]

[tool.black]
line-length = 120
skip-string-normalization = true
exclude = "src/medik_pyk/ext"

[tool.mypy]
disallow_untyped_defs = true
exclude = "src/medik_pyk/ext"
